--- a/CommunityMarket/app/src/main/res/layout/activity_splash.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_splash.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/pacifico"
+        android:fontFamily="@font/righteous"
         android:text="Open Market"
         android:textColor="@color/black"
         android:textSize="@dimen/splash_text_logo_name"
