--- a/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/profil_container"
         android:layout_width="match_parent"
-        android:layout_height="135dp"
+        android:layout_height="@dimen/principal_container_height"
         app:cardBackgroundColor="@color/blanc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,8 +24,9 @@
 
             <ImageView
                 android:id="@+id/post_image_vendeur"
-                android:layout_width="140dp"
-                android:layout_height="135dp"
+                android:layout_width="@dimen/principal_width_image"
+                android:layout_height="match_parent"
+                android:src="@drawable/t_shirt"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +35,11 @@
 
             <ImageView
                 android:id="@+id/profil_vendeur"
-                android:layout_width="@dimen/item_principal_image_dim_height_with"
-                android:layout_height="@dimen/item_principal_image_dim_height_with"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="@dimen/nvx_item_nvx_image_dim_height_with"
+                android:layout_height="@dimen/nvx_item_nvx_image_dim_height_with"
+                android:layout_marginStart="@dimen/principal_image_round_start"
+                android:layout_marginTop="@dimen/principal_round_image_top"
+                android:layout_marginEnd="92dp"
                 app:layout_constraintStart_toEndOf="@+id/post_image_vendeur"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,8 +47,10 @@
                 android:id="@+id/nom_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/nunito_bold"
+                android:layout_marginStart="@dimen/principal_start"
+                android:ellipsize="end"
+                android:fontFamily="@font/righteous"
+                android:lines="1"
                 android:text="yannick houdini"
                 android:textColor="@color/black"
                 android:textSize="@dimen/item_principal_name"
@@ -59,55 +63,59 @@
                 android:id="@+id/post_userTemps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/nunito_bold"
-                android:text="17 mai 2019"
-                android:textSize="@dimen/item_principal_date"
+                android:layout_marginStart="@dimen/principal_image_round_start"
+                android:layout_marginTop="@dimen/principal_temps_top"
+                android:layout_marginEnd="@dimen/principal_end"
+                android:fontFamily="@font/righteous"
+                android:text="17/02/2019"
+                android:textSize="@dimen/item_principal_desc"
                 app:layout_constraintStart_toEndOf="@+id/profil_vendeur"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/post_user_description"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/principal_item_desc_text_two"
+                android:layout_height="@dimen/principal_desc_height"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginTop="@dimen/principal_prix_top_two"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:lines="3"
                 android:text="kdflekfief jnrkg "
                 android:textColor="@color/black"
                 android:textSize="@dimen/item_principal_desc"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.098"
-                app:layout_constraintStart_toEndOf="@+id/postImage"
+                app:layout_constraintStart_toEndOf="@+id/post_image_vendeur"
                 app:layout_constraintTop_toBottomOf="@+id/nom_user" />
 
             <TextView
                 android:id="@+id/prix_postl_vendeur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="sans-serif-condensed"
+                android:layout_marginStart="@dimen/priincipal_comment"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/righteous"
+                android:text="5000"
                 android:textColor="@color/orange"
-                android:textSize="@dimen/item_principal_prix"
+                android:textSize="@dimen/item_principal_desc"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/text_prix"
                 app:layout_constraintStart_toEndOf="@+id/text_prix"
-                app:layout_constraintTop_toTopOf="@+id/text_prix" />
+                app:layout_constraintTop_toTopOf="@+id/text_prix"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/text_prix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="sans-serif-condensed"
+                android:layout_marginStart="@dimen/principal_image_round_start"
+                android:layout_marginTop="@dimen/principal_prix_top_two"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/righteous"
                 android:text="@string/item_general"
                 android:textColor="@color/black"
-                android:textSize="@dimen/item_principal_prix"
+                android:textSize="@dimen/item_principal_desc"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/post_user_description"
                 app:layout_constraintTop_toBottomOf="@+id/post_user_description" />
@@ -137,11 +145,13 @@
                 android:id="@+id/comment_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/priincipal_comment"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/righteous"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="@dimen/item_principal_desc"
                 app:layout_constraintBottom_toBottomOf="@+id/image_comment"
                 app:layout_constraintStart_toEndOf="@+id/image_comment"
                 app:layout_constraintTop_toTopOf="@+id/image_comment" />
