--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -72,15 +72,14 @@
                     android:id="@+id/detail_prix_produit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/bangers"
                     android:text="1000 fcfa "
                     android:background="@drawable/button_background"
-                    android:textColor="@color/blanc"
                     android:padding="2dp"
-                    android:theme="@style/edit_theme"
-                    android:textSize="18sp"
+                    android:textColor="@color/blanc"
+                    android:textSize="@dimen/detail_text_size_two"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_image_du_profil" />
@@ -89,21 +88,20 @@
                     android:id="@+id/date_de_publication"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:fontFamily="@font/fugaz_one"
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/detail_text_size_two"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
-
                 <ImageView
                     android:id="@+id/detail_image_du_profil"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="@dimen/detail_image_height_width"
+                    android:layout_height="@dimen/detail_image_height_width"
                     android:theme="@style/edit_theme"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="376dp"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
+                    android:layout_marginTop="@dimen/detail_image_top"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView5"
                     app:srcCompat="@drawable/boy" />
