--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -62,19 +62,18 @@
                     app:layout_constraintHorizontal_bias="0.976"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_image_post" />
-
                 <TextView
                     android:id="@+id/detail_prix_produit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/bangers"
                     android:text="1000 fcfa "
                     android:background="@drawable/button_background"
-                    android:textColor="@color/blanc"
                     android:padding="2dp"
-                    android:textSize="18sp"
+                    android:textColor="@color/blanc"
+                    android:textSize="@dimen/detail_text_size_two"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_image_du_profil" />
@@ -83,23 +82,20 @@
                     android:id="@+id/date_de_publication"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:fontFamily="@font/fugaz_one"
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/detail_text_size_two"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
-
                 <ImageView
                     android:id="@+id/detail_image_du_profil"
                     android:layout_width="@dimen/detail_image_height_width"
                     android:layout_height="@dimen/detail_image_height_width"
-                    android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:theme="@style/edit_theme"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="@dimen/detail_image_top"
-                    android:layout_marginBottom="90dp"
-                    app:layout_constraintBottom_toTopOf="@+id/voir_les_commentaire_btn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView5"
                     app:srcCompat="@drawable/boy" />
