--- a/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
@@ -244,6 +244,8 @@
     <dimen name="principal_desc_height">60dp</dimen>
     <dimen name="principal_prix_top_two">8dp</dimen>
     <dimen name="principal_start">8dp</dimen>
+    <dimen name="principal_item_desc_text_two">150dp</dimen>
+
 
 
 
