--- a/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
@@ -264,5 +264,7 @@
     <dimen name="principal_desc_height">80dp</dimen>
     <dimen name="principal_prix_top_two">4dp</dimen>
     <dimen name="principal_start">8dp</dimen>
+    <dimen name="principal_item_desc_text_two">120dp</dimen>
+
 
 </resources>
