--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -253,7 +253,8 @@
     <dimen name="principal_image_round_start">32dp</dimen>
     <dimen name="principal_item_desc_text">350dp</dimen>
     <dimen name="principal_desc_height">95dp</dimen>
-    <dimen name="principal_prix_top_two">8dp</dimen>
+    <dimen name="principal_prix_top_two">12dp</dimen>
     <dimen name="principal_start">32dp</dimen>
+    <dimen name="principal_item_desc_text_two">450dp</dimen>
 
 </resources>
