--- a/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
@@ -240,7 +240,9 @@
     <dimen name="principal_image_round_start">16dp</dimen>
     <dimen name="principal_item_desc_text">150dp</dimen>
     <dimen name="principal_desc_height">80dp</dimen>
-    <dimen name="principal_prix_top_two">2dp</dimen>
+    <dimen name="principal_prix_top_two">4dp</dimen>
     <dimen name="principal_start">8dp</dimen>
+    <dimen name="principal_item_desc_text_two">180dp</dimen>
+
 
 </resources>
