--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -244,6 +244,8 @@
     <dimen name="principal_image_round_start">16dp</dimen>
     <dimen name="principal_item_desc_text">150dp</dimen>
     <dimen name="principal_desc_height">70dp</dimen>
-    <dimen name="principal_prix_top_two">2dp</dimen>
+    <dimen name="principal_prix_top_two">8dp</dimen>
     <dimen name="principal_start">8dp</dimen>
+    <dimen name="principal_item_desc_text_two">180dp</dimen>
+
 </resources>
