--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -246,6 +246,7 @@
     <dimen name="principal_prix_top_two">8dp</dimen>
     <dimen name="principal_start">24dp</dimen>
     <dimen name="principal_item_desc_text_two">300dp</dimen>
+    <dimen name="principal_temps_top_two">8dp</dimen>
 
 
 </resources>
