--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -256,5 +256,6 @@
     <dimen name="principal_prix_top_two">12dp</dimen>
     <dimen name="principal_start">32dp</dimen>
     <dimen name="principal_item_desc_text_two">450dp</dimen>
+    <dimen name="principal_temps_top_two">8dp</dimen>
 
 </resources>
