--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -19,17 +19,15 @@
     </style>
 
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/pacifico</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:fontFamily">@font/righteous</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
     <style name="ToolbarTheme_two" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
     <style name="ToolbarThemeTwo" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/pacifico</item>
+        <item name="android:fontFamily">@font/righteous</item>
         <item name="colorPrimary">@color/blanc</item>
         <item name="android:colorAccent">@color/blanc</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
@@ -37,10 +35,11 @@
     <style name="edit_theme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/righteous</item>
         <item name="colorPrimary">@color/blanc</item>
-        <item name="android:colorAccent">@color/blanc</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
     <style name="progress_theme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/righteous</item>
         <item name="colorAccent">@color/black</item>
     </style>
 
