--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -40,7 +40,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:text="Bienvenu sur Open Market ,avant de pouvoir poster, modifier les donnees de votre compte ."
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
@@ -57,11 +57,11 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
+                android:fontFamily="@font/righteous"
                 android:text="modifier"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
-                android:fontFamily="@font/nunito_bold"
                 app:layout_constraintEnd_toStartOf="@+id/exit_button"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -83,8 +83,8 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
-                android:fontFamily="@font/nunito_bold"
                 android:background="@drawable/button_background"
+                android:fontFamily="@font/righteous"
                 android:text="plus tard"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
