--- a/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
@@ -96,14 +96,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/paraameetre_button_margin_end"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="@dimen/paraameetre_button_margin_end"
         android:background="@drawable/button_background"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:padding="@dimen/param_button_padding"
         android:text="@string/a_propos_button"
         android:textAllCaps="false"
-        android:textColor="@color/blanc"
+        android:textColor="@color/black"
         android:textSize="@dimen/button_param_text_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
