--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -112,7 +112,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/choice_Logo_margin_top"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/fredoka_one"
+        android:fontFamily="@font/caveat"
         android:text="O.Market "
         android:textColor="@color/blanc"
         android:textSize="@dimen/choice_Logo_text_size"
