--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -57,12 +57,11 @@
                 android:alpha="0.5"
                 android:elevation="1dp"
                 android:ems="10"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:hint="@string/produc_name"
                 android:inputType="textPersonName"
                 android:maxLength="35"
                 android:textColor="@color/black"
-
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/parametre_text_size"
                 android:theme="@style/edit_theme"
@@ -81,7 +80,7 @@
                 android:alpha="0.5"
                 android:elevation="1dp"
                 android:ems="10"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:hint="@string/post_description"
                 android:inputType="textMultiLine"
                 android:maxLength="400"
@@ -104,7 +103,7 @@
                 android:alpha="0.5"
                 android:elevation="1dp"
                 android:ems="10"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:hint="@string/post_prix"
                 android:inputType="number"
                 android:textColor="@color/black"
@@ -123,13 +122,13 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/second_button_background"
+                android:background="@drawable/button_background"
                 android:text="mettre en vendre"
                 android:textAllCaps="false"
-                android:textColor="@color/blanc"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -167,7 +166,5 @@
                 app:srcCompat="@drawable/ic_ajouter" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
-
-
 
 </android.support.constraint.ConstraintLayout>
