--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -100,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
-                    android:fontFamily="@font/fugaz_one"
+                    android:fontFamily="@font/righteous"
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
@@ -167,6 +167,7 @@
                     android:lineSpacingExtra="8dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/new_detail_desc_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.444"
