--- a/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
@@ -179,9 +179,10 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="@dimen/pub_button_start_end"
                     android:layout_marginBottom="24dp"
-                    android:background="@drawable/button_background"
+                    android:background="@drawable/second_button_background"
                     android:fontFamily="@font/righteous"
                     android:text="appeler"
+                    android:elevation="5dp"
                     android:textAllCaps="false"
                     android:textColor="@color/blanc"
                     app:layout_constraintBottom_toBottomOf="parent"
