--- a/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="@dimen/choice_Logo_margin_top"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/righteous"
-        android:text="Advert !!!"
+        android:text="Advert"
         android:textAlignment="center"
         android:textColor="@color/blanc"
         android:textSize="@dimen/choice_Logo_text_size"
