--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -96,10 +96,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
-                    android:theme="@style/edit_theme"
+                    android:fontFamily="@font/righteous"
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
+                    android:theme="@style/edit_theme"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
 
@@ -160,9 +161,11 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/righteous"
                     android:lineSpacingExtra="8dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/new_detail_desc_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.444"
                     app:layout_constraintStart_toStartOf="parent"
