--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:theme="@style/AppTheme.AppBarOverlay_two">
 
         <android.support.v7.widget.Toolbar
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/black"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/righteous"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             >
 
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             app:tabGravity="fill"
             android:elevation="8dp"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/righteous"
             app:tabIndicatorColor="@color/blanc"
             android:background="@color/black"
             app:tabMode="scrollable">
