--- a/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
@@ -23,14 +23,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_parametre">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ScrollView
@@ -39,7 +39,7 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/parametre_image"
@@ -168,9 +168,9 @@
                         android:inputType="textMultiLine|textPersonName"
                         android:maxLength="250"
                         android:singleLine="false"
-                        android:textSize="@dimen/parametre_text_size"
                         android:textColor="@color/blanc"
                         android:textColorHint="@color/blanc"
+                        android:textSize="@dimen/parametre_text_size"
                         android:theme="@style/edit_theme"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -181,9 +181,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/new_profil_button"
-                        android:layout_marginTop="32dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="@dimen/new_profil_button"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginBottom="70dp"
                         android:background="@drawable/button_background"
                         android:fontFamily="@font/righteous"
                         android:text="@string/parametre_button"
@@ -195,8 +195,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/param_mail"
-                         />
+                        app:layout_constraintTop_toBottomOf="@+id/param_mail" />
 
                     <ImageButton
                         android:id="@+id/imageButton"
