--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -149,8 +149,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="70dp"
                 android:background="@drawable/button_background"
                 android:text="mettre en vendre"
                 android:textAllCaps="false"
