--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -248,5 +248,6 @@
     <dimen name="principal_start">8dp</dimen>
     <dimen name="principal_item_desc_text_two">180dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
-
+    <dimen name="login_text_size">40sp</dimen>
+    <dimen name="login_start_end">120dp</dimen>
 </resources>
