--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -129,7 +129,7 @@
         android:fontFamily="@font/righteous"
         android:text="Join us now . "
         android:textColor="@color/blanc"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,12 +139,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="@dimen/login_start_end"
         android:layout_marginTop="@dimen/choice_Logo_margin_top"
         android:fontFamily="@font/righteous"
         android:text="Open"
         android:textColor="@color/blanc"
-        android:textSize="40sp"
+        android:textSize="@dimen/login_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -153,11 +153,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="@dimen/login_start_end"
         android:fontFamily="@font/righteous"
         android:text="Market"
         android:textColor="#ff17"
-        android:textSize="40sp"
+        android:textSize="@dimen/login_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
