--- a/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
@@ -12,7 +12,7 @@
     <dimen name="a_propos_nuttoon_padding">68dp</dimen>
     <dimen name="a_propos_button_size_text">30sp</dimen>
     <!-- choice activity. -->
-    <dimen name="choice_Logo_margin_top">65dp</dimen>
+    <dimen name="choice_Logo_margin_top">80dp</dimen>
     <dimen name="choice_Logo_text_size">70sp</dimen>
     <dimen name="choice_button_padding_top">10dp</dimen>
     <dimen name="button_size_text">12sp</dimen>
@@ -246,7 +246,8 @@
     <dimen name="principal_start">8dp</dimen>
     <dimen name="principal_item_desc_text_two">150dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
-
+    <dimen name="login_text_size">40sp</dimen>
+    <dimen name="login_start_end">70dp</dimen>
 
 
 
