--- a/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
@@ -266,6 +266,7 @@
     <dimen name="principal_start">8dp</dimen>
     <dimen name="principal_item_desc_text_two">120dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
-
+    <dimen name="login_text_size">40sp</dimen>
+    <dimen name="login_start_end">70dp</dimen>
 
 </resources>
