--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -15,7 +15,7 @@
     <dimen name="button_size_text">16sp</dimen>
 
     <!-- choice activity. -->
-    <dimen name="choice_Logo_margin_top">120dp</dimen>
+    <dimen name="choice_Logo_margin_top">350dp</dimen>
     <dimen name="choice_Logo_text_size">100sp</dimen>
     <dimen name="choice_button_top">200dp</dimen>
     <dimen name="choice_button_text_size">14dp</dimen>
@@ -257,5 +257,6 @@
     <dimen name="principal_start">32dp</dimen>
     <dimen name="principal_item_desc_text_two">450dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
-
+    <dimen name="login_text_size">80sp</dimen>
+    <dimen name="login_start_end">250dp</dimen>
 </resources>
