--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
-                    android:fontFamily="@font/bangers"
+                    android:fontFamily="@font/righteous"
                     android:text="1000 fcfa "
                     android:background="@drawable/background_detail_activity"
                     android:padding="2dp"
