--- a/CommunityMarket/app/src/main/res/drawable/gradient_four.xml
+++ b/CommunityMarket/app/src/main/res/drawable/gradient_four.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient android:angle="90"
-        android:endColor="#FF8C00"
+        android:endColor="#ff17"
         android:startColor="#f80759"/>
 </shape>
