--- a/CommunityMarket/app/src/main/res/drawable/gradient_one.xml
+++ b/CommunityMarket/app/src/main/res/drawable/gradient_one.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient android:angle="225"
-        android:endColor="#5c258d"
-        android:startColor="#ffd6d3"/>
+        android:endColor="@color/orange"
+        android:startColor="#ff17"/>
 </shape>
