--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
-                    android:fontFamily="@font/bangers"
+                    android:fontFamily="@font/righteous"
                     android:text="1000 fcfa "
                     android:background="@drawable/background_detail_activity"
                     android:padding="2dp"
@@ -157,6 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:clickable="true"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
                     app:layout_constraintEnd_toStartOf="@+id/vendeur_button"
                     app:layout_constraintTop_toBottomOf="@+id/detail_image_post"
