--- a/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
@@ -43,8 +43,8 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/parametre_image"
-                        android:layout_width="@dimen/parametre_actibity_image_w_n_h"
-                        android:layout_height="@dimen/parametre_actibity_image_w_n_h"
+                        android:layout_width="@dimen/new_profil_image_dimen"
+                        android:layout_height="@dimen/new_profil_image_dimen"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="8dp"
@@ -202,16 +202,17 @@
                         android:layout_width="@dimen/parametre_image_button"
                         android:layout_height="@dimen/parametre_image_button"
                         android:layout_marginBottom="24dp"
+                        android:padding="10dp"
                         android:background="@drawable/background_message_button"
                         app:layout_constraintBottom_toTopOf="@+id/param_nom"
                         app:layout_constraintEnd_toEndOf="@+id/parametre_image"
-                        app:srcCompat="@drawable/ic_ajouter" />
+                        app:srcCompat="@drawable/photo" />
 
                     <ProgressBar
                         android:id="@+id/parametre_progressbar"
                         style="?android:attr/progressBarStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/commentaire_circle_widht_height"
+                        android:layout_height="@dimen/commentaire_circle_widht_height"
                         android:layout_marginStart="8dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginEnd="8dp"
@@ -223,7 +224,7 @@
                         app:layout_constraintTop_toTopOf="@+id/parametre_image" />
 
                     <TextView
-                        android:id="@+id/textView8"
+                        android:id="@+id/parametre_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
@@ -245,10 +246,10 @@
                         android:fontFamily="@font/nunito_bold"
                         android:text="Dites en plus sur vous ..."
                         android:textColor="@color/blanc"
-                        app:layout_constraintEnd_toEndOf="@+id/textView8"
+                        app:layout_constraintEnd_toEndOf="@+id/parametre_text"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="@+id/textView8"
-                        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                        app:layout_constraintStart_toStartOf="@+id/parametre_text"
+                        app:layout_constraintTop_toBottomOf="@+id/parametre_text" />
 
                 </android.support.constraint.ConstraintLayout>
             </ScrollView>
