--- a/CommunityMarket/app/src/main/res/layout/activity_post.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".postActivity.PostActivity"
+    android:background="@color/black"
   >
 
     <android.support.v7.widget.Toolbar
