--- a/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".postActivity.SellActivityUser">
+    tools:context=".postActivity.SellActivityUser"
+    android:background="@color/black"
+    >
 
     <TextView
         android:id="@+id/vente_presente"
@@ -16,6 +18,7 @@
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/righteous"
         android:text="vide "
+        android:textColor="@color/blanc"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
