--- a/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black"
+    >
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,6 +15,7 @@
     android:id="@+id/constraint_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".postActivity.UserGeneralPresentation">
 
 
@@ -36,33 +39,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <!-- app:layout_constraintTop_toBottomOf="@+id/general_toolbar"-->
+        android:background="@color/black"
+
         >
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            >
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                >
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@color/black"
+                    >
 
                     <TextView
                         android:id="@+id/general_user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/new_profil_user_name_top"
-                        android:textColor="@color/orange"
+                        android:layout_marginTop="32dp"
+                        android:fontFamily="@font/righteous"
+                        android:textColor="#ff17"
                         android:textSize="@dimen/new_profil_name_text_size"
                         android:textStyle="bold"
-                        android:fontFamily="@font/righteous"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/generalImageProfilUser" />
@@ -72,8 +82,9 @@
                         android:layout_width="@dimen/new_profil_image_dimen"
                         android:layout_height="@dimen/new_profil_image_dimen"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="56dp"
+                        android:layout_marginTop="70dp"
                         android:layout_marginEnd="8dp"
+                        android:src="@drawable/boy"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -101,12 +112,12 @@
                         android:id="@+id/detail_user"
                         android:layout_width="@dimen/new_profil_desc_widht"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/new_profil_margin_top"
+                        android:layout_marginTop="16dp"
+                        android:fontFamily="@font/righteous"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
-                        android:fontFamily="@font/righteous"
                         app:layout_constraintEnd_toEndOf="@+id/general_user_name"
                         app:layout_constraintStart_toStartOf="@+id/general_user_name"
                         app:layout_constraintTop_toBottomOf="@+id/general_user_name" />
@@ -116,9 +127,9 @@
                         android:layout_width="@dimen/new_profil_view_widht"
                         android:layout_height="@dimen/new_profil_view_height"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="@dimen/new_profil_view_margin_top"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="@dimen/new_profil_view_margin_end"
-                        android:background="@color/black"
+                        android:background="@color/blanc"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/detail_user" />
@@ -139,9 +150,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="110dp"
                         android:layout_marginEnd="110dp"
-                        android:text="vu le"
-                        android:textColor="@color/black"
                         android:fontFamily="@font/nunito_bold"
+                        android:text="vu le"
+                        android:textColor="@color/blanc"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                         app:layout_constraintEnd_toStartOf="@+id/imageView4"
@@ -162,14 +173,16 @@
 
                     <TextView
                         android:id="@+id/general_residence"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/new_profil_text_margin_top"
+                        android:fontFamily="@font/righteous"
                         android:text="xxxx"
+                        android:textAlignment="center"
+                        android:textColor="@color/blanc"
+
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
-                        android:fontFamily="@font/righteous"
-
                         app:layout_constraintEnd_toEndOf="@+id/imageView2"
                         app:layout_constraintStart_toStartOf="@+id/imageView2"
                         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -178,11 +191,12 @@
                         android:id="@+id/general_last_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="xxxx"
-                        android:textSize="@dimen/new_profil_text_size"
-                        android:textStyle="bold"
                         android:fontFamily="@font/righteous"
+                        android:text="xxxx"
+                        android:textColor="@color/blanc"
+                        android:textSize="@dimen/new_profil_text_size"
 
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/general_residence"
                         app:layout_constraintEnd_toEndOf="@+id/imageView3"
                         app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -194,11 +208,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="xxxx"
-                        android:textSize="@dimen/new_profil_text_size"
-                        android:textStyle="bold"
                         android:fontFamily="@font/righteous"
+                        android:text="xxxx"
+                        android:textColor="@color/blanc"
+                        android:textSize="@dimen/new_profil_text_size"
 
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/imageView4"
                         app:layout_constraintStart_toStartOf="@+id/imageView4"
                         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
@@ -210,7 +225,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="@dimen/new_profil_view_margin_top"
                         android:layout_marginEnd="@dimen/new_profil_view_margin_end"
-                        android:background="@color/black"
+                        android:background="@color/blanc"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/general_last_view" />
@@ -250,11 +265,22 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/general_voir_ventes" />
 
+                    <View
+                        android:id="@+id/view4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@color/blanc"
+                        app:layout_constraintBottom_toTopOf="@+id/generalImageProfilUser"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <ImageView
                         android:id="@+id/close_bottom_sheet"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="32dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -265,10 +291,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginTop="16dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_bottom_sheet_up" />
+
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
         </android.support.constraint.ConstraintLayout>
