--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -16,8 +16,8 @@
             android:id="@+id/detail_image_post_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/black"
             android:fontFamily="@font/righteous"
+            android:background="@drawable/gradient_list"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             >
 
@@ -31,7 +31,7 @@
             android:elevation="8dp"
             android:fontFamily="@font/righteous"
             app:tabIndicatorColor="@color/blanc"
-            android:background="@color/black"
+            android:background="@drawable/gradient_list"
             app:tabMode="scrollable">
 
 
