--- a/CommunityMarket/app/src/main/res/layout/fragment_lingerie.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_lingerie.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.LingerieFragment"
     android:id="@+id/layout"
-    android:background="@drawable/gradient_list">
+    android:background="@color/black"    >
 
     <ViewFlipper
         android:id="@+id/viewFlippertwo"
