--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -81,8 +81,8 @@
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/background_detail_activity"
-                    android:fontFamily="@font/bangers"
-                    android:padding="1dp"
+                    android:fontFamily="@font/righteous"
+                    android:padding="2dp"
                     android:text="1000 fcfa "
                     android:textAlignment="center"
                     android:textColor="@color/blanc"
