--- a/CommunityMarket/app/src/main/res/drawable/background_dipay_message_right.xml
+++ b/CommunityMarket/app/src/main/res/drawable/background_dipay_message_right.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:startColor="#fff"  android:endColor="#fff"></gradient>
     <corners android:radius="10dp"
-        android:topRightRadius="0dp"></corners>
+        ></corners>
 </shape>
     <!-- c21500  ffc500 -->
