--- a/CommunityMarket/app/src/main/res/drawable/gradient_four.xml
+++ b/CommunityMarket/app/src/main/res/drawable/gradient_four.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:angle="90"
+    <gradient android:angle="45"
         android:endColor="#ff17"
-        android:startColor="#f80759"/>
+        android:startColor="@color/orange"/>
 </shape>
