--- a/CommunityMarket/app/src/main/res/layout/activity_profile.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_profile.xml
@@ -35,6 +35,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black">
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:alpha="0.1"
+                android:background="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                tools:ignore="Orientation">
+                <ImageView
+                    android:id="@+id/images_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/slider_description"/>
+
+            </LinearLayout>
 
 
             <TextView
@@ -212,6 +237,7 @@
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
 
 
 </android.support.constraint.ConstraintLayout>
