--- a/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
@@ -35,35 +35,56 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <!-- app:layout_constraintTop_toBottomOf="@+id/general_toolbar"-->
-        android:background="@color/black"
-
-        >
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="NotSibling">
+        android:background="@color/black">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black"
-            >
+            android:background="@color/black">
+
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                >
+                app:layout_constraintStart_toStartOf="parent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/black"
-                    >
+                    android:background="@color/black">
+                    <LinearLayout
+                        android:id="@+id/linearLayout"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:alpha="0.1"
+                        android:background="@color/black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="Orientation">
+                        <ImageView
+                            android:id="@+id/images_background"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:contentDescription="@string/slider_description"/>
 
+                    </LinearLayout>
                     <TextView
                         android:id="@+id/general_user_name"
                         android:layout_width="wrap_content"
@@ -100,8 +121,8 @@
                         style="?android:attr/progressBarStyle"
                         android:layout_width="@dimen/nvx_item_nvx_like_image"
                         android:layout_height="@dimen/nvx_item_nvx_like_image"
-                        android:theme="@style/progress_theme"
                         android:layout_marginBottom="8dp"
+                        android:theme="@style/progress_theme"
                         android:visibility="invisible"
                         app:layout_constraintBottom_toBottomOf="@+id/generalImageProfilUser"
                         app:layout_constraintEnd_toEndOf="@+id/generalImageProfilUser"
@@ -238,9 +259,9 @@
                         android:layout_marginTop="@dimen/new_profil_button_margin_top"
                         android:layout_marginEnd="@dimen/new_profil_button"
                         android:background="@drawable/button_background"
+                        android:fontFamily="@font/righteous"
                         android:text="voir ventes "
                         android:textAllCaps="false"
-                        android:fontFamily="@font/righteous"
 
                         android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -256,9 +277,9 @@
                         android:layout_marginEnd="@dimen/new_profil_button"
                         android:layout_marginBottom="32dp"
                         android:background="@drawable/main_background"
+                        android:fontFamily="@font/righteous"
                         android:text="contacter"
                         android:textAllCaps="false"
-                        android:fontFamily="@font/righteous"
                         android:textColor="@color/blanc"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
