--- a/CommunityMarket/app/src/main/res/layout/nav_header_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/nav_header_accueil.xml
@@ -12,7 +12,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:backgroundTint="@color/black">
+    android:backgroundTint="@color/blanc">
 
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
@@ -39,7 +39,7 @@
           android:layout_marginTop="8dp"
           android:layout_marginEnd="8dp"
           android:fontFamily="@font/nunito_bold"
-          android:textColor="@color/blanc"
+          android:textColor="@color/black"
           android:textSize="19sp"
           android:textStyle="bold"
           android:theme="@style/ToolbarTheme"
