--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -3,18 +3,20 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">#ff17</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/blanc</item>
     </style>
     <style name="AppTheme.AppBarOverlay_two" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
-</style>
+    </style>
+
 <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="slash" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/righteous</item>
         <item name="android:windowBackground">@drawable/splash_activity_background</item>
     </style>
 
