--- a/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
@@ -40,51 +40,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="NotSibling">
-        android:background="@color/black">
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black">
-
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/black">
-                    <LinearLayout
-                        android:id="@+id/linearLayout"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:alpha="0.1"
-                        android:background="@color/black"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0"
-                        tools:ignore="Orientation">
-                        <ImageView
-                            android:id="@+id/images_background"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:contentDescription="@string/slider_description"/>
 
-                    </LinearLayout>
                     <TextView
                         android:id="@+id/general_user_name"
                         android:layout_width="wrap_content"
@@ -136,7 +97,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/righteous"
                         android:textAlignment="center"
-                        android:textColor="@color/black"
+                        android:textColor="@color/blanc"
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/general_user_name"
@@ -318,8 +279,6 @@
                         app:srcCompat="@drawable/ic_bottom_sheet_up" />
 
                 </android.support.constraint.ConstraintLayout>
-            </android.support.v7.widget.CardView>
-        </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
 </com.flipboard.bottomsheet.BottomSheetLayout>
